Fixed mobile landscape overflow

--- a/client/stylesheets/containers/_omnicard.scss
+++ b/client/stylesheets/containers/_omnicard.scss
@@ -6,7 +6,7 @@
   left: 0;
 
   @media #{$md-mobile-landscape-media} {
-    width: 256px;
+    width: 320px;
   }
 
   @media #{$md-tablet-media} {
